--- a/src/sections/core/inline-cart.liquid
+++ b/src/sections/core/inline-cart.liquid
@@ -1,1 +1,7 @@
-{%- include 'inline-cart' -%}
+{%- include 'inline-cart', section_id: section.id -%}
+
+{% schema %}
+  {
+    "name": "Inline Cart"
+  }
+{% endschema %}
