--- a/src/snippets/components/header.liquid
+++ b/src/snippets/components/header.liquid
@@ -1,14 +1,15 @@
-{% comment %}
+{%- comment -%}
 
-  Arguments:
-
-  - level
+  Required arguments:
   - title
+
+  Optional arguments:
+  - level
   - content
   - classes
   - attrs
 
-{% endcomment %}
+{%- endcomment -%}
 
 
 <header class="oo-header {{ classes -}}" {{ attrs -}}>
