--- a/src/snippets/components/icon-with-text.liquid
+++ b/src/snippets/components/icon-with-text.liquid
@@ -1,13 +1,14 @@
-{% comment %}
+{%- comment -%}
 
-  Arguments:
-
+  Required arguments:
   - icon
   - text
+
+  Optional arguments:
   - classes
   - attrs
 
-{% endcomment %}
+{%- endcomment -%}
 
 
 <div class="oo-icon-with-text {{ classes -}}" {{ attrs -}}>
