--- a/src/snippets/components/quantity-select.liquid
+++ b/src/snippets/components/quantity-select.liquid
@@ -1,12 +1,13 @@
-{% comment %}
+{%- comment -%}
 
-  Arguments:
+  Required arguments:
 
+  Optional arguments:
   - quantity
   - classes
   - attrs
 
-{% endcomment %}
+{%- endcomment -%}
 
 
 <div
