--- a/src/snippets/components/text.liquid
+++ b/src/snippets/components/text.liquid
@@ -1,12 +1,13 @@
-{% comment %}
+{%- comment -%}
 
-  Arguments:
-
+  Required arguments:
   - content
+
+  Optional arguments:
   - classes
   - attrs
 
-{% endcomment %}
+{%- endcomment -%}
 
 
 <p class="oo-text {{ classes -}}" {{ attrs -}}>
