--- a/src/snippets/components/video.liquid
+++ b/src/snippets/components/video.liquid
@@ -1,15 +1,18 @@
-{% comment %}
+{%- comment -%}
 
-  Arguments:
-
+  Required arguments:
   - src
+
+  Optional arguments:
   - controls
   - muted
   - autoplay
   - loop
   - poster
+  - classes
+  - attrs
 
-{% endcomment %}
+{%- endcomment -%}
 
 
 <video
