--- a/src/snippets/core/api-variant-object.liquid
+++ b/src/snippets/core/api-variant-object.liquid
@@ -1,4 +1,4 @@
 {
-  "variant": {{ _variant | json }},
-  "inventory": {{- _variant.inventory_quantity -}}
+  "variant": {{ variant | json }},
+  "inventory": {{- variant.inventory_quantity -}}
 }
