--- a/src/snippets/core/base-img-url.liquid
+++ b/src/snippets/core/base-img-url.liquid
@@ -1,16 +1,17 @@
+{% assign _descriptor = descriptor -%}
 {%- if descriptor != blank -%}
-  {%- assign descriptor = descriptor | prepend: ' ' -%}
+  {% assign _descriptor = descriptor | prepend: ' ' -%}
 {%- endif -%}
 
 {%- case type -%}
   {%- when 'file' -%}
-    {{- resource | file_img_url: size, crop: crop, scale: scale, format: format }}{{ descriptor -}}
+    {{- resource | file_img_url: size, crop: crop, scale: scale, format: format }}{{ _descriptor -}}
   {%- when 'asset' -%}
-    {{- resource | asset_img_url: size, crop: crop, scale: scale, format: format }}{{ descriptor -}}
+    {{- resource | asset_img_url: size, crop: crop, scale: scale, format: format }}{{ _descriptor -}}
   {%- when 'img' -%}
-    {{- resource | img_url: size, crop: crop, scale: scale, format: format }}{{ descriptor -}}
+    {{- resource | img_url: size, crop: crop, scale: scale, format: format }}{{ _descriptor -}}
   {%- else -%}
-    {{- resource | img_url: size, crop: crop, scale: scale, format: format }}{{ descriptor -}}
+    {{- resource | img_url: size, crop: crop, scale: scale, format: format }}{{ _descriptor -}}
 {%- endcase -%}
 
-{%- assign descriptor = blank -%}
+{%- assign _descriptor = blank -%}
