--- a/src/styles/base/elements.scss
+++ b/src/styles/base/elements.scss
@@ -48,3 +48,12 @@ input {
     outline: none;
   }
 }
+
+.oo-image-wrapper {
+  display: inline-block;
+}
+
+.oo-text,
+.oo-heading {
+  margin: 0;
+}
