--- a/src/layout/checkout.liquid
+++ b/src/layout/checkout.liquid
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="canonical" href="{{ canonical_url }}">
 
-    {%- include 'page-favicon' -%}
+    {%- include 'layout-favicon' -%}
 
     <title>{{ page_title }}</title>
 
