--- a/src/snippets/core/api-option-object.liquid
+++ b/src/snippets/core/api-option-object.liquid
@@ -1,18 +1,19 @@
 {% comment %}
 
-  Arguments:
-
+  Required arguments:
   - option
+
+  Optional arguments:
 
 {% endcomment %}
 
 {
-  "name": "{{- option.name | json -}}",
+  "name": {{- option.name | json -}},
   "position": {{- option.position -}},
   "values": [
     {%- for value in option.values -%}
-      "{{- value | json -}}"{%- unless forloop.last -%},{%- endunless -%}
+      {{- value | json -}}{%- unless forloop.last -%},{%- endunless -%}
     {%- endfor -%}
   ],
-  "initialValue": "{{- option.selected_value | json -}}"
+  "initialValue": {{- option.selected_value | json -}}
 }
