--- a/src/snippets/core/api-variant-data.liquid
+++ b/src/snippets/core/api-variant-data.liquid
@@ -1,8 +1,17 @@
+{% comment %}
+
+  Required arguments:
+  - variants
+
+  Optional arguments:
+
+{% endcomment %}
+
 <script type="application/json" data-variant-data>
 {
   "data": [
-    {%- for _variant in _product.variants -%}
-      {%- include 'api-variant-object', _variant: _variant -%}{%- unless forloop.last -%},{%- endunless -%}
+    {%- for variant in variants -%}
+      {%- include 'api-variant-object', variant: variant -%}{%- unless forloop.last -%},{%- endunless -%}
     {%- endfor -%}
   ]
 }
