--- a/src/snippets/core/api-variant-data.liquid
+++ b/src/snippets/core/api-variant-data.liquid
@@ -1,6 +1,7 @@
 {% comment %}
 
   Required arguments:
+  - _product
   - variants
 
   Optional arguments:
@@ -11,7 +12,7 @@
 {
   "data": [
     {%- for variant in variants -%}
-      {%- include 'api-variant-object', variant: variant -%}{%- unless forloop.last -%},{%- endunless -%}
+      {%- include 'api-variant-object', _product: _product, variant: variant -%}{%- unless forloop.last -%},{%- endunless -%}
     {%- endfor -%}
   ]
 }
