--- a/src/snippets/containers/product-container.liquid
+++ b/src/snippets/containers/product-container.liquid
@@ -29,6 +29,6 @@
   {{- content -}}
 
   {%- include 'api-option-data', options: _product.options_with_values -%}
-  {%- include 'api-variant-data', variants: _product.variants -%}
+  {%- include 'api-variant-data', _product: _product, variants: _product.variants -%}
 
 </{%- if tag != blank -%}{{- tag -}}{%- else -%}section{%- endif %}>
