--- a/src/snippets/core/api-option-object.liquid
+++ b/src/snippets/core/api-option-object.liquid
@@ -13,7 +13,6 @@
   "values": [
     {%- for value in option.values -%}
       {{- value | json -}}{%- unless forloop.last -%},{%- endunless -%}
-    {%- endfor -%}
-  ],
+    {%- endfor -%}],
   "initialValue": {{- option.selected_value | json -}}
 }
