--- a/src/snippets/containers/line-item-container.liquid
+++ b/src/snippets/containers/line-item-container.liquid
@@ -19,8 +19,9 @@
 
 <section
   class="oo-line-item {{ classes -}}"
-  data-line-item="{{- name -}}"
-  data-line-item-id="{{- id -}}"
+  data-container="line-item"
+  data-container-name="{{- name -}}"
+  data-container-id="{{- id -}}"
   data-line-item-key="{{- line_item.key -}}"
   {{ attrs -}}>
 
