--- a/src/snippets/components/option-group.liquid
+++ b/src/snippets/components/option-group.liquid
@@ -38,7 +38,7 @@
 
   {%- for value in option.values -%}
 
-    {%- assign input_attrs = 'data-option-value' -%}
+    {%- assign input_attrs = 'data-option-value required' -%}
     {%- if option.selected_value == value -%}
       {%- assign input_attrs = input_attrs | append: ' checked' -%}
     {%- endif -%}
