--- a/src/snippets/components/quantity-select.liquid
+++ b/src/snippets/components/quantity-select.liquid
@@ -25,7 +25,7 @@
     type: 'number',
     name: 'quantity',
     value: input_value,
-    attrs: 'min=1 data-quantity-value' -%}
+    attrs: 'min=1 data-quantity-value readonly' -%}
 
   {%- include 'button',
     content: '+',
