--- a/src/sections/core/inline-cart.liquid
+++ b/src/sections/core/inline-cart.liquid
@@ -1,4 +1,4 @@
-{%- include 'content-inline-cart', section_id: section.id -%}
+{%- include 'inline-cart', section_id: section.id -%}
 
 {% schema %}
   {
