--- a/src/snippets/ajax/inline-cart-contents.liquid
+++ b/src/snippets/ajax/inline-cart-contents.liquid
@@ -7,6 +7,6 @@
 
   {% endcomment %}
 
-  {% include 'container-line-item-inline-cart' %}
+  {% include 'inline-cart-line-item', line_item: line_item %}
 
 {% endfor %}
