--- a/src/snippets/api/dataLayer.liquid
+++ b/src/snippets/api/dataLayer.liquid
@@ -22,7 +22,7 @@
 
 (function () {
 
-  {% include 'api-dataLayer-config' %}
+  {% include 'dataLayer-config' %}
 
   // init data layer if doesn't already exist
   window.dataLayer = window.dataLayer || [];
