--- a/src/snippets/containers/line-item-container.liquid
+++ b/src/snippets/containers/line-item-container.liquid
@@ -29,6 +29,6 @@
 
   {{- content -}}
 
-  {%- include 'api-line-item-data', line_item: line_item -%}
+  {%- include 'line-item-data', line_item: line_item -%}
 
 </section>
