--- a/src/snippets/image/lqip-img-url.liquid
+++ b/src/snippets/image/lqip-img-url.liquid
@@ -12,7 +12,7 @@
   {%- endcapture -%}
 {%- endif -%}
 
-{%- include 'base-img-url',
+{%- include 'img-url',
   resoure: resource,
   size: lqip_size,
   crop: crop,
