--- a/src/snippets/api/line-item-data.liquid
+++ b/src/snippets/api/line-item-data.liquid
@@ -15,7 +15,7 @@
       {%- for property in line_item.properties -%}{{- property.first | json -}}: {{- property.last | json -}}{%- unless forloop.last -%},{%- endunless -%}
     {%- endfor -%}
     },
-    "variant": {%- include 'api-variant-object', variant: line_item.variant -%}
+    "variant": {%- include 'variant-object', variant: line_item.variant -%}
   }
 }
 </script>
