--- a/src/snippets/api/option-data.liquid
+++ b/src/snippets/api/option-data.liquid
@@ -11,7 +11,7 @@
 {
   "data": [
     {%- for option in options -%}
-      {%- include 'api-option-object',
+      {%- include 'option-object',
         option: option -%}{%- unless forloop.last -%},{%- endunless -%}
     {%- endfor -%}
   ]
