--- a/src/snippets/api/variant-data.liquid
+++ b/src/snippets/api/variant-data.liquid
@@ -12,7 +12,7 @@
 {
   "data": [
     {%- for variant in variants -%}
-      {%- include 'api-variant-object', _product: _product, variant: variant -%}{%- unless forloop.last -%},{%- endunless -%}
+      {%- include 'variant-object', _product: _product, variant: variant -%}{%- unless forloop.last -%},{%- endunless -%}
     {%- endfor -%}
   ]
 }
