--- a/src/snippets/static/inline-cart.liquid
+++ b/src/snippets/static/inline-cart.liquid
@@ -34,7 +34,7 @@
 
   <div class="oo-inline-cart--contents" data-inline-cart-contents>
 
-    {%- include 'ajax-inline-cart' -%}
+    {%- include 'inline-cart-contents' -%}
 
   </div>
 
