--- a/src/templates/product.liquid
+++ b/src/templates/product.liquid
@@ -1,11 +1,1 @@
-{% comment %}
-
-  Arguments:
-
-  - classes
-  - attrs
-
-{% endcomment %}
-
-
-{%- include 'product-template', _product: product -%}
+{%- section 'product' -%}
